Finish Responsive Design and Website

--- a/src/index.html
+++ b/src/index.html
@@ -140,8 +140,8 @@
                     <div class="add_new_edit_project_content_container grid">
                         <div class="add_new_edit_project_content">
                             <label for="edit_project_title" class="add_new_edit_project_title_container flex">
-                                <h3 id="edit_project_name">Edit Project</h3>
-                                <input type="text" maxlength="30" name="edit_project_title" data-project-id="" data-project-name="" id="edit_project_title" class="add_new_edit_project_title" placeholder="Name">
+                                <h3 id="edit_project_name" class="remove_in_mobile_view">Edit Project</h3>
+                                <input type="text" maxlength="30" name="edit_project_title" data-project-id="" data-project-name="" id="edit_project_title" class="add_new_edit_project_title" placeholder="DELETE">
                             </label>
                         </div>
                         <button id="edit_project_create_btn" class="new_edit_project_create_btn new_edit_create_btn pointer"></button>
@@ -204,7 +204,7 @@
                 <div class="add_new_edit_project_content_container grid">
                     <div class="add_new_edit_project_content">
                         <label for="delete_task_input" class="add_new_edit_project_title_container flex">
-                            <h3 id="delete_task_name">Delete Task</h3>
+                            <h3 id="delete_task_name" class="remove_in_mobile_view">Delete Task</h3>
                             <input id="delete_task_input" type="text" name="delete_task_input" class="add_new_edit_project_title" placeholder="DELETE">
                         </label>
                     </div>
@@ -252,6 +252,5 @@
             </section>
         </section>
     </main>
-    <footer class="main_footer">Website Under Construction</footer>
 </body>
 </html>
